[package]
name = "axfutex"
version = "0.1.0"
edition = "2021"

[features]

fs = ["axfs"]

monolithic = ["fs", "axfs/monolithic", "axhal/monolithic", "axtask/monolithic"]

default = ["monolithic"]

[dependencies]
cfg-if = "1.0"
bitflags = "2.0"
spinlock = { git = "https://github.com/Starry-OS/spinlock.git" }
lazy_init = { git = "https://github.com/Starry-OS/lazy_init.git", optional = true }
axtask = { git = "https://github.com/Starry-OS/axtask.git" }
axsync = { git = "https://github.com/Starry-OS/axsync.git" }
axmem = { git = "https://github.com/Starry-OS/axmem.git" }
axalloc = { git = "https://github.com/Starry-OS/axalloc.git" }
axhal = { git = "https://github.com/Starry-OS/axhal.git" }
axlog = { git = "https://github.com/Starry-OS/axlog.git" }
axerrno = { git = "https://github.com/Starry-OS/axerrno.git" }
axconfig = { git = "https://github.com/Starry-OS/axconfig.git" }
axfs = { git = "https://github.com/Starry-OS/axfs.git", optional = true }
axsignal = { git = "https://github.com/Starry-OS/axsignal.git" }
axprocess = { git = "https://github.com/Starry-OS/axprocess.git" }
